@@ -910,6 +910,15 @@ sub command_param {
     }
     exit(print_results($function,$id, %params));
     return(0);
+  } elsif ($option eq "count") {
+    $function .= "_count_all";
+    my %params;
+    if (defined($cmd{'node_filter'})) {
+      $params{'where'}{'type'}=$cmd{'node_filter'}[0][0];
+      $params{'where'}{'value'}=$cmd{'node_filter'}[0][1];
+    }
+    exit(print_results($function,$id, %params));
+    return(0);
   } elsif ($option eq "add"){
     $function.="_add"; 
   } elsif ($option eq "edit") {
