@@ -120,6 +120,7 @@
         extended node view filters from categories to pid
         added node view limit clause
         added node view order by clause
+        added node count
 
 1.7.5
         pfsetvlan should check that MAC field is filled before
